--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -17,16 +17,18 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand fs-3 fw-bold" href="#">Caffe Santuy</a>
+                <a class="navbar-brand fs-3 fw-bold" href="#">KlikPizza</a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active fs-5" aria-current="page" href="#">Home</a>
-                        <a class="nav-link fs-5" href="#menu">Menu</a>
-                        <a class="nav-link fs-5" href="#contact-me">Contact</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#">Beranda</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#">Tentang</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#">Layanan</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#menu">Menu</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#contact-me">Kontak Kami</a>
                     </div>
                 </div>
             </div>
@@ -39,12 +41,12 @@
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
-                    <h1>Hidup itu pusing kalo dipikirin! Jadi santai, walau pahit, nikmatin aja.</h1>
+                    <h1>Pizza Tasty</h1>
                     <p>
-                        Kafe yang buka dari pukul 07.00 pagi ini menawarkan menu minuman kopi yang khas, seperti Piccolo dan Long Black. Untuk yang selain kopi, ada minuman bercampur jahe yaitu Ginger Milk Tea dan Turmeric Ginger.
+                        Cobain Pizza terlaris minggu ini.
                     </p>
                     <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
-                        Pesan Sekarang!
+                        Lihat Menu
                     </button>
                 </div>
                 <div class="col-md-6"></div>
@@ -53,25 +55,31 @@
     </section>
     <!-- banner / hero End -->
 
+    <section>
+        <div class="col-md-6">
+            <h1>Menu Minggu Ini</h1>
+        </div>
+    </section>
+
     <!-- image card Start -->
     <section id="menu">
         <div class="container">
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="https://image.freepik.com/free-photo/piccolo-latte-art-paper-cup-wooden-desk_3249-5443.jpg"
+                        <img src="plate1.png"
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
-                            <h5 class="card-title">Kopi Piccolo</h5>
+                            <h5 class="card-title">Salad BBQ</h5>
                             <p class="card-text">
-                                Piccolo adalah racikan kopi dan susu. Hampir sama dengan kopi latte namun Piccolo jumlah campuran kopinya lebih banyak dari latte. Minimal jumlah campuran kopi dan susunya sama atau seimbang.
+                                Delicious dish
                             </p>
                             <div class="harga row justify-content-between">
                                 <div class="col-4">
                                     <a href="#" class="btn btn-primary">Order</a>
                                 </div>
                                 <div class="col-4">
-                                    Rp. 10.000
+                                    Rp. 20.000
                                 </div>
                             </div>
                         </div>
@@ -79,20 +87,19 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="https://image.freepik.com/free-vector/coffee-poster-with-realistic-white-porcelain-cup-textured-background_1284-10871.jpg"
+                        <img src="plate2.png"
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
-                            <h5 class="card-title">Long Black</h5>
+                            <h5 class="card-title">Salad with Fish</h5>
                             <p class="card-text">
-                                enis minuman yang termasuk ke dalam “keluarga kopi hitam” ini terdiri dari air panas dan espresso. Minuman ini disajikan dengan menyiapkan air panas terlebih dahulu lalu 
-                                setelah itu dituangkan espresso ke dalamnya. Long black berasal dari Australia dan Selandia Baru oleh karena itu cara penyajiannya haruslah mengikut negara asalnya, tak boleh sebaliknya. Untuk perbandingan rasio air dan espressonya biasanya tergantung selera. Ada yang mengatakan jika memakai 160 ml air, sebaiknya menggunakan 30 ml. 
+                                Delicious dish 
                             </p>
                             <div class="harga row justify-content-between">
                                 <div class="col-4">
                                     <a href="#" class="btn btn-primary">Order</a>
                                 </div>
                                 <div class="col-4">
-                                    Rp. 10.000
+                                    Rp. 50.000
                                 </div>
                             </div>
                         </div>
@@ -100,19 +107,19 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="https://image.freepik.com/free-photo/indian-ginger-tea-with-milk-spices-red_338311-739.jpg"
+                        <img src="plate3.png"
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
-                            <h5 class="card-title">Ginger Milk Tea</h5>
+                            <h5 class="card-title">Spinach Salad</h5>
                             <p class="card-text">
-                                Teh halia adalah bahasa Melayu untuk teh jahe. Minuman yang sedikit pedas dan manis ini disajikan di kedai kopi tradisional di Singapura dan Malaysia. Teh susu jahe versi kedai kopi sangat manis karena mereka menggunakan susu kental manis.
+                                Delicious dish
                             </p>
                             <div class="harga row justify-content-between">
                                 <div class="col-4">
                                     <a href="#" class="btn btn-primary">Order</a>
                                 </div>
                                 <div class="col-4">
-                                    Rp. 10.000
+                                    Rp. 70.000
                                 </div>
                             </div>
                         </div>
@@ -224,10 +231,7 @@
     <footer>
         <div class="footer container-fluid bg-dark text-center text-white mt-5">
             <div class="copyright">
-                © Copyright <strong><span>Caffe Santuy</span></strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                Designed by <a href="https://github.com/RadityaPratama03" target="_blank">Raditya Pratama Putra</a>
+                © Copyright <strong><span>20190140101 - Raditya Pratama Putra </span></strong>. All Rights Reserved
             </div>
          </div>
     </footer>
