--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -57,7 +57,7 @@
 
     <section>
         <div class="col-md-6">
-            <h1>Menu Minggu Ini</h1>
+            <h9 text-align: -webkit-center;>Menu Minggu Ini</h9>
         </div>
     </section>
 
@@ -219,7 +219,7 @@
                             required=""></textarea>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Send Message</button>
+                        <button type="submit" class="btn btn-primary">Kontak Kami Sekarang</button>
                     </div>
                 </form>
             </div>
