--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -26,7 +26,7 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active fs-5" aria-current="page" href="#">Beranda</a>
                         <a class="nav-link active fs-5" aria-current="page" href="#">Tentang</a>
-                        <a class="nav-link active fs-5" aria-current="page" href="#">Layanan</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#layanan">Layanan</a>
                         <a class="nav-link active fs-5" aria-current="page" href="#menu">Menu</a>
                         <a class="nav-link active fs-5" aria-current="page" href="#contact-me">Kontak Kami</a>
                     </div>
@@ -57,7 +57,7 @@
 
     <section>
         <div class="col-md-6">
-            <h9 text-align: -webkit-center;>Menu Minggu Ini</h9>
+            <h1 text-align: center;>Menu Minggu Ini</h1>
         </div>
     </section>
 
@@ -67,7 +67,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate1.png"
+                        <img src="plate1.png" width="200" height="200">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate2.png"
+                        <img src="plate2.png" width="200" height="200">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate3.png"
+                        <img src="plate3.png" width="200" height="200">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
@@ -130,98 +130,92 @@
     </section>
     <!-- image card End -->
 
-    <!-- Contact Start -->
-    <section id="contact-me">
+    <!-- Layanan Start  -->
+    <section>
+        <div class="col-md-6">
+            <h1 text-align: center;>Our Amazing Services</h1>
+        </div>
+    </section>
+    <section id="layanan">
         <div class="container">
             <div class="row mt-5 gy-5">
-                <div class="col-md-6 mb-5">
-                    <div class="section-title mb-3 text-center">
-                        <h3 class="fs-2">F.A.Q</h3>
-                    </div>
-                    <div class="accordion accordion-flush" id="accordionFlushExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                    aria-controls="flush-collapseOne">
-                                    How to order us?
-                                </button>
-                            </h2>
-                            <div id="flush-collapseOne" class="accordion-collapse collapse"
-                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is
-                                    intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the first
-                                    item's
-                                    accordion body.</div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                    aria-controls="flush-collapseTwo">
-                                    Payment can be used what?
-                                </button>
-                            </h2>
-                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is
-                                    intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the second
-                                    item's
-                                    accordion body. Let's imagine this being filled with some actual content.
+                <div class="col-md-12 col-lg-4">
+                    <div class="card mb-5">
+                        <img src="dish.svg" width="200" height="200">
+                            class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
+                        <div class="card-body">
+                            <h5 class="card-title">Makanan Enak</h5>
+                            <p class="card-text">
+                                Kami menamwarkan layanan berkualitas tinggi kepada klien kami selama 
+                                bertahun-tahun dengan makanan terbaik dan lezat di kota ini.
+                            </p>
+                            <div class="harga row justify-content-between">
+                                <div class="col-4">
+                                    <a href="#" class="btn btn-primary">Order</a>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                    aria-controls="flush-collapseThree">
-                                    Can Delivery?
-                                </button>
-                            </h2>
-                            <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is
-                                    intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the third
-                                    item's
-                                    accordion body. Nothing more exciting happening here in terms of content,
-                                    but just
-                                    filling up the space to make it look, at least at first glance, a bit more
-                                    representative of how this would look in a real-world application.</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <form class="col-lg-6">
-                    <div class="section-title mb-3 text-center">
-                        <h3 class="fs-2">Contact Us</h3>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                                required="">
+                <div class="col-md-12 col-lg-4">
+                    <div class="card mb-5">
+                        <img src="pizza.svg" width="200" height="200">
+                            class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
+                        <div class="card-body">
+                            <h5 class="card-title">Makanan Cepat Saji</h5>
+                            <p class="card-text">
+                                Kami menawarkan layanan berkulitas tinggi kepada klien kami 
+                                selama bertahun-tahun dengan makanan terbaik dan lezat di kota ini.
+                            </p>
+                            <div class="harga row justify-content-between">
+                                <div class="col-4">
+                                    <a href="#" class="btn btn-primary">Order</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                                required="">
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-4">
+                    <div class="card mb-5">
+                        <img src="truck.svg" width="200" height="200">
+                            class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
+                        <div class="card-body">
+                            <h5 class="card-title">Pesan Antar</h5>
+                            <p class="card-text">
+                                Kami menawarkan layanan berkualitas tinggi kepada klien kami
+                                selama bertahun-tahun dengan makanan terbaik di kota ini. 
+                            </p>
+                            <div class="harga row justify-content-between">
+                                <div class="col-4">
+                                    <a href="#" class="btn btn-primary">Order</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group mb-3">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                            required="">
-                    </div>
-                    <div class="form-group mb-3">
-                        <textarea class="form-control" name="message" rows="5" placeholder="Message"
-                            required=""></textarea>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Kontak Kami Sekarang</button>
-                    </div>
-                </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Layanan End -->
+
+    <!-- Contact Start -->
+    <section id="contact-me">
+        <div class="hero-banner container-fluid p-5 text-white">
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <h1>Let's Talk</h1>
+                    <p>
+                        Kontak Kami
+                    </p>
+                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
+                        Jika Anda ingin memesan meja di restora kami,
+                        hubungi kami dan kami akan segera melayani Anda layanan obrolan 24/7 kami.
+                    </button>
+                </div>
+                <div class="col-md-6"></div>
+                <div class="text-left">
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </div>
             </div>
         </div>
     </section>
@@ -233,7 +227,7 @@
             <div class="copyright">
                 © Copyright <strong><span>20190140101 - Raditya Pratama Putra </span></strong>. All Rights Reserved
             </div>
-         </div>
+        </div>
     </footer>
     <!-- footer End -->
 
