--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -24,8 +24,8 @@
                 </button>
                 <div class="navbar-collapse collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active fs-5" aria-current="page" href="#">Beranda</a>
-                        <a class="nav-link active fs-5" aria-current="page" href="#">Tentang</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#beranda">Beranda</a>
+                        <a class="nav-link active fs-5" aria-current="page" href="#section">Tentang</a>
                         <a class="nav-link active fs-5" aria-current="page" href="#layanan">Layanan</a>
                         <a class="nav-link active fs-5" aria-current="page" href="#menu">Menu</a>
                         <a class="nav-link active fs-5" aria-current="page" href="#contact-me">Kontak Kami</a>
@@ -37,7 +37,7 @@
     <!-- Header End -->
 
     <!-- banner / hero Start -->
-    <section>
+    <section id="beranda">
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
@@ -55,6 +55,10 @@
     </section>
     <!-- banner / hero End -->
 
+    <section id="section">
+
+    </section>
+
     <section>
         <div class="col-md-6">
             <h1 text-align: center;>Menu Minggu Ini</h1>
@@ -67,7 +71,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate1.png" width="200" height="200">
+                        <img src="plate1.png">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
@@ -87,7 +91,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate2.png" width="200" height="200">
+                        <img src="plate2.png">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
@@ -107,7 +111,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate3.png" width="200" height="200">
+                        <img src="plate3.png">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
@@ -149,11 +153,6 @@
                                 Kami menamwarkan layanan berkualitas tinggi kepada klien kami selama 
                                 bertahun-tahun dengan makanan terbaik dan lezat di kota ini.
                             </p>
-                            <div class="harga row justify-content-between">
-                                <div class="col-4">
-                                    <a href="#" class="btn btn-primary">Order</a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -167,11 +166,6 @@
                                 Kami menawarkan layanan berkulitas tinggi kepada klien kami 
                                 selama bertahun-tahun dengan makanan terbaik dan lezat di kota ini.
                             </p>
-                            <div class="harga row justify-content-between">
-                                <div class="col-4">
-                                    <a href="#" class="btn btn-primary">Order</a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -185,11 +179,6 @@
                                 Kami menawarkan layanan berkualitas tinggi kepada klien kami
                                 selama bertahun-tahun dengan makanan terbaik di kota ini. 
                             </p>
-                            <div class="harga row justify-content-between">
-                                <div class="col-4">
-                                    <a href="#" class="btn btn-primary">Order</a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -213,9 +202,6 @@
                     </button>
                 </div>
                 <div class="col-md-6"></div>
-                <div class="text-left">
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </div>
             </div>
         </div>
     </section>
