--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -71,7 +71,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate1.png">
+                        <img src="plate1.png" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate2.png">
+                        <img src="plate2.png" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate3.png">
+                        <img src="plate3.png" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
