--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -12,6 +12,10 @@
     <title>20190140101 - Raditya Pratama Putra</title>
 </head>
 
+<head>
+    <img src="home.png" alt="">
+</head>
+
 <body>
     <!-- Header start -->
     <header>
