--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -71,7 +71,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate1.png" alt="">
+                        <img src="images/plate1.png" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate2.png" alt="">
+                        <img src="images/plate2.png" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="plate3.png" alt="">
+                        <img src="images/plate3.png" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
@@ -192,14 +192,14 @@
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
-                    <h1>Let's Talk</h1>
+                    <h1>Kontak Kami</h1>
                     <p>
-                        Kontak Kami
+                        Let's Talk
                     </p>
-                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
-                        Jika Anda ingin memesan meja di restora kami,
+                    <p>
+                        Jika Anda ingin memesan meja di restoran kami,
                         hubungi kami dan kami akan segera melayani Anda layanan obrolan 24/7 kami.
-                    </button>
+                    </p>
                 </div>
                 <div class="col-md-6"></div>
             </div>
