--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -56,7 +56,25 @@
     <!-- banner / hero End -->
 
     <section id="section">
-
+        <div class="hero-banner container-fluid p-5 text-white">
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <h1>Tentang Kami</h1>
+                    <p>
+                        Kami menyediakan berbagai makanan enak
+                    </p>
+                    <p>
+                        Kami memasak makanan terbaik di seluruh kota
+                        dengan layanan pelanggan yang sangat baik
+                        makanan terbaik dan dengan harga terbaik kunjungi kami.
+                    </p>
+                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
+                        Explore History
+                    </button>
+                </div>
+                <div class="col-md-6"></div>
+            </div>
+        </div>
     </section>
 
     <section>
@@ -145,7 +163,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="dish.svg" width="200" height="200">
+                        <img src="Images/dish.svg" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Makanan Enak</h5>
@@ -158,7 +176,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="pizza.svg" width="200" height="200">
+                        <img src="Images/pizza.svg" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Makanan Cepat Saji</h5>
@@ -171,7 +189,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="truck.svg" width="200" height="200">
+                        <img src="Images/truck.svg" alt="">
                             class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
                         <div class="card-body">
                             <h5 class="card-title">Pesan Antar</h5>
