--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -80,7 +80,7 @@
 
     <section>
         <div class="col-md-6">
-            <h1 text-align: center;>Menu Minggu Ini</h1>
+            <h1 style="text-align : center;">Menu Minggu Ini</h1>
         </div>
     </section>
 
@@ -156,7 +156,7 @@
     <!-- Layanan Start  -->
     <section>
         <div class="col-md-6">
-            <h1 text-align: center;>Our Amazing Services</h1>
+            <h1 style="text-align : center;">Our Amazing Services</h1>
         </div>
     </section>
     <section id="layanan">
@@ -211,7 +211,7 @@
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
-                    <h1>Kontak Kami</h1>
+                    <h1 >Kontak Kami</h1>
                     <p>
                         Let's Talk
                     </p>
