--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -78,9 +78,9 @@
         </div>
     </section>
 
-    <section>
+    <section style="text-align : center;">
         <div class="col-md-6">
-            <h1 style="text-align : center;">Menu Minggu Ini</h1>
+            <h1>Menu Minggu Ini</h1>
         </div>
     </section>
 
@@ -154,9 +154,9 @@
     <!-- image card End -->
 
     <!-- Layanan Start  -->
-    <section>
+    <section style="text-align : center;">
         <div class="col-md-6">
-            <h1 style="text-align : center;">Our Amazing Services</h1>
+            <h1>Our Amazing Services</h1>
         </div>
     </section>
     <section id="layanan">
