--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -154,12 +154,10 @@
     <!-- image card End -->
 
     <!-- Layanan Start  -->
-    <section style="text-align : center;">
+    <section id="layanan" style="text-align : center;">
         <div class="col-md-6">
             <h1>Our Amazing Services</h1>
-        </div>
-    </section>
-    <section id="layanan">
+        </div>    
         <div class="container">
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
