--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -90,8 +90,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="Images/plate1.png" alt="">
-                            class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
+                        <img id="menu" src="Images/plate1.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
                             <p class="card-text">
@@ -110,8 +109,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="Images/plate2.png" alt="">
-                            class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
+                        <img id="menu" src="Images/plate2.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
                             <p class="card-text">
@@ -130,8 +128,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="Images/plate3.png" alt="">
-                            class="card-img-top" alt="..." height="300px" style="object-fit: cover" />
+                        <img id="menu" src="Images/plate3.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
                             <p class="card-text">
