--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -90,7 +90,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img id="menu" src="Images/plate1.png" alt="">
+                        <img id="menu" src="plate1.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
                             <p class="card-text">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img id="menu" src="Images/plate2.png" alt="">
+                        <img id="menu" src="plate2.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
                             <p class="card-text">
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img id="menu" src="Images/plate3.png" alt="">
+                        <img id="menu" src="plate3.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
                             <p class="card-text">
