--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -38,7 +38,6 @@
 
     <!-- banner / hero Start -->
     <section id="beranda">
-        <img style="border-radius: 100%;" src="home.png" alt="">  
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
@@ -159,7 +158,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="Images/dish.svg" alt="">
+                        <img src="dish.svg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Makanan Enak</h5>
                             <p class="card-text">
@@ -171,7 +170,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="Images/pizza.svg" alt="">
+                        <img src="pizza.svg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Makanan Cepat Saji</h5>
                             <p class="card-text">
@@ -183,7 +182,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="Images/truck.svg" alt="">
+                        <img src="truck.svg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Pesan Antar</h5>
                             <p class="card-text">
