--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -89,7 +89,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img id="menu" src="plate1.png" alt="">
+                        <img style="border-radius: 100%;" src="plate1.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
                             <p class="card-text">
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img id="menu" src="plate2.png" alt="">
+                        <img style="border-radius: 100%;" src="plate2.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
                             <p class="card-text">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img id="menu" src="plate3.png" alt="">
+                        <img style="border-radius: 100%;" src="plate3.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
                             <p class="card-text">
@@ -158,7 +158,7 @@
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="dish.svg" alt="">
+                        <img style="border-radius: 100%;" src="dish.svg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Makanan Enak</h5>
                             <p class="card-text">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="pizza.svg" alt="">
+                        <img style="border-radius: 100%;" src="pizza.svg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Makanan Cepat Saji</h5>
                             <p class="card-text">
@@ -182,7 +182,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img src="truck.svg" alt="">
+                        <img style="border-radius: 100%;" src="truck.svg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Pesan Antar</h5>
                             <p class="card-text">
