--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -41,6 +41,7 @@
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
+                    <img style="border-radius: 100%;" src="menu.png" alt="">
                     <h1>Pizza Tasty</h1>
                     <p>
                         Cobain Pizza terlaris minggu ini.
