--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -41,7 +41,6 @@
         <div class="hero-banner container-fluid p-5 text-white">
             <div class="row mt-5">
                 <div class="col-md-6">
-                    <img style="border-radius: 100%;" src="menu.png" alt="">
                     <h1>Pizza Tasty</h1>
                     <p>
                         Cobain Pizza terlaris minggu ini.
@@ -50,6 +49,7 @@
                         Lihat Menu
                     </button>
                 </div>
+                <img style="border-radius: 100%;" src="menu.png" alt="menu"/>
                 <div class="col-md-6"></div>
             </div>
         </div>
